--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <link rel="stylesheet" href="css/style.css">
 
-	<script src="js/infiniteslidev2.js"></script>
+	<script src="js/infiniteslidev2.min.js"></script>
     <script src="js/script.js"></script>
 
 </head>
