--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
     <div class="blockImgs">
 
         <div class="nav nav-pills ColunaImgs">
-
             <a data-toggle="pill" href="#Design" aria-selected="false">
                 <img class="third" src="img/IMG_9447-Editar.jpg">
                 <img class="second" src="img/IMG_9447-Editar.jpg">
@@ -124,15 +123,78 @@
                 <img class="second" src="img/IMG_6056-Editar.jpg">
                 <img class="first" src="img/IMG_6056-Editar.jpg">
             </a>
-            
         </div>
 
         <div class="Conteudo tab-content">
             <div class="tab-pane fade" id="Design">
-                <h1>teste</h1>
+                <div class="mainPhoto">
+                    <img src="https://via.placeholder.com/450x650" alt="">
+                </div>
+                <div class="mainText">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum eu facilisis sed odio. Purus ut faucibus pulvinar elementum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla at volutpat diam ut venenatis.</p>
+                </div>
+                <div class="galery">
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/250x500">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/300x400">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/450x300">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/150x550">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/350x200">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/400x250">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/250x400">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="https://via.placeholder.com/350x200">
+                    </div>
+                </div>
             </div>
             <div class="tab-pane fade" id="Foto">
-                <h2> teste foto</h2>
+                <div class="mainPhoto">
+                    <img src="img/IMG_9270.jpg" alt="">
+                </div>
+                <div class="mainText">
+                    <p>Projeto realizado para a marca autoral de Renata McCartney, estilista curitibana que trabalha com couro e cores sólidas e terrosas.</p>
+                    <p>Junto a Igor Jacobe, realizamos fotografia, direção criativa, edição e retoque para a campanha de bolsas.</p>
+                </div>
+                <div class="galery">
+                    <div class="imgBlock">
+                        <img src="img/IMG_9835-Editar.jpg">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="img/IMG_9491.jpg">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="img/IMG_9766.jpg">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="img/IMG_9278.jpg">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="img/IMG_9270.jpg">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="img/IMG_9766.jpg">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="img/IMG_9835-Editar.jpg">
+                    </div>
+                    <div class="imgBlock">
+                        <img src="img/IMG_9278.jpg">
+                    </div>
+                </div>
             </div>
         </div>
 
