Teste Ficha tecnica

--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
                         <img src="https://via.placeholder.com/350x200">
                     </div>
                 </div>
+                <div class="FichaTecnica">
+                    <p>teste</p>
+                </div>
             </div>
             <div class="tab-pane fade" id="galeria02">
                 <div class="mainPhoto">
@@ -194,6 +197,9 @@
                     <div class="imgBlock">
                         <img src="img/IMG_9278.jpg">
                     </div>
+                </div>
+                <div class="FichaTecnica">
+                    <p>teste</p>
                 </div>
             </div>
             <div class="tab-pane fade" id="galeria03">
@@ -230,6 +236,9 @@
                         <img src="img/IMG_9278.jpg">
                     </div>
                 </div>
+                <div class="FichaTecnica">
+                    <p>teste</p>
+                </div>
             </div>
             <div class="tab-pane fade" id="galeria04">
                 <div class="mainPhoto">
@@ -264,6 +273,9 @@
                     <div class="imgBlock">
                         <img src="https://via.placeholder.com/350x200">
                     </div>
+                </div>
+                <div class="FichaTecnica">
+                    <p>teste</p>
                 </div>
             </div>
         </div>
