--- a/index.html
+++ b/index.html
@@ -35,22 +35,38 @@
 
 </head>
 
+
 <body>
     
     <header>
-        <div class="scroll1">
+        <div class="scroll">
+            <span class="marqueeText">
+                Vitor Pêgo é um designer visual, fotógrafo e designer de tipos.
+                Criando no limite do uso de ruído e cores, procurando um balanço entre caos
+                e ordem que define o estilo de seu trabalho. 1/2 do 
+                <a class="mainLink" target="_blank" href="https://www.instagram.com/pepperitah/">Pepperitah</a> e 1/2 do 
+                <a class="mainLink" target="_blank" href="https://www.instagram.com/sometimesvvwork/">sometimesvvwork.</a>
+                Colaborou previamente com 
+                <a target="_blank" href="https://www.biabum.com">Estúdio Biabum</a>,
+                <a target="_blank" href="https://220mkt.com.br">220MKT</a>,
+                <a target="_blank" href="https://straubdesign.com.br">Straub Design</a>, 
+                <a target="_blank" href="https://www.instagram.com/1826stds/">1826stds</a>
+                e outros. 
+                <img src="img/bandeira.png">
+            </span>
             <span class="marqueeText">Vitor Pêgo é um designer visual, fotógrafo e designer de tipos.
                 Criando no limite do uso de ruído e cores, procurando um balanço entre caos
                 e ordem que define o estilo de seu trabalho. 1/2 do 
-                <a target="_blank" href="https://www.instagram.com/pepperitah/">Pepperitah</a> e 1/2 do 
-                <a target="_blank" href="https://www.instagram.com/sometimesvvwork/">sometimesvvwork.</a>
-                Colaborou previamente com Estúdio Biabum, 220MKT, Straub Design, 1826stds e outros. <img src="img/bandeira.png"></span>
-            <span class="marqueeText">Vitor Pêgo é um designer visual, fotógrafo e designer de tipos.
-                Criando no limite do uso de ruído e cores, procurando um balanço entre caos
-                e ordem que define o estilo de seu trabalho. 1/2 do 
-                <a target="_blank" href="https://www.instagram.com/pepperitah/">Pepperitah</a> e 1/2 do 
-                <a target="_blank" href="https://www.instagram.com/sometimesvvwork/">sometimesvvwork.</a>
-                Colaborou previamente com Estúdio Biabum, 220MKT, Straub Design, 1826stds e outros. <img src="img/bandeira.png"></span>
+                <a class="mainLink" target="_blank" href="https://www.instagram.com/pepperitah/">Pepperitah</a> e 1/2 do 
+                <a class="mainLink" target="_blank" href="https://www.instagram.com/sometimesvvwork/">sometimesvvwork.</a>
+                Colaborou previamente com 
+                <a target="_blank" href="https://www.biabum.com">Estúdio Biabum</a>,
+                <a target="_blank" href="https://220mkt.com.br">220MKT</a>,
+                <a target="_blank" href="https://straubdesign.com.br">Straub Design</a>, 
+                <a target="_blank" href="https://www.instagram.com/1826stds/">1826stds</a>
+                e outros. 
+                <img src="img/bandeira.png">
+            </span>
         </div>
     </header>
 
@@ -82,24 +98,24 @@
     </div>
 
     <div class="projetos">
-        <ul class="scroll">
-            <li class="marqueeText">Projetos</li>
-            <li class="marqueeText">Projetos</li>
-            <li class="marqueeText">Projetos</li>
-            <li class="marqueeText">Projetos</li>
-            <li class="marqueeText">Projetos</li>
+        <ul class="scroll1">
+            <li class="marqueeText project">PROJETOS •</li>
+            <li class="marqueeText project">PROJETOS •</li>
+            <li class="marqueeText project">PROJETOS •</li>
+            <li class="marqueeText project">PROJETOS •</li>
+            <li class="marqueeText project">PROJETOS •</li>
         </ul>
     </div>
 
     <div class="blockImgs">
 
         <div class="nav nav-pills ColunaImgs">
-            <a data-toggle="pill" href="#galeria01" aria-selected="false">
+            <a onclick="clickPhoto()" data-toggle="pill" href="#galeria01" aria-selected="false">
                 <img class="third" src="img/IMG_9447-Editar.jpg">
                 <img class="second" src="img/IMG_9447-Editar.jpg">
                 <img class="first" src="img/IMG_9447-Editar.jpg">
             </a>
-            <a data-toggle="pill" href="#galeria03" aria-selected="false">
+            <a onclick="clickPhoto()" data-toggle="pill" href="#galeria03" aria-selected="false">
                 <img src="img/IMG_9278.jpg">
             </a>
             <a>
@@ -127,6 +143,7 @@
 
         <div class="Conteudo tab-content">
             <div class="tab-pane fade" id="galeria01">
+                <h1 class="nomeProjeto">NOME PROJETO TESTE •</h1>
                 <div class="mainPhoto">
                     <img src="https://via.placeholder.com/450x650" alt="">
                 </div>
@@ -281,10 +298,10 @@
         </div>
 
         <div class="nav nav-pills ColunaImgs">
-            <a data-toggle="pill" href="#galeria02" aria-selected="false">
+            <a onclick="clickPhoto()" data-toggle="pill" href="#galeria02" aria-selected="false">
                 <img src="img/IMG_8902-Editar.jpg">
             </a>
-            <a data-toggle="pill" href="#galeria04" aria-selected="false">
+            <a onclick="clickPhoto()" data-toggle="pill" href="#galeria04" aria-selected="false">
                 <img src="img/IMG_9278.jpg">
             </a>
             <a>
@@ -312,5 +329,14 @@
 
     </div>
     
+
+    <div class="ficha">
+        <ul class="scroll2">
+            <li class="marqueeText">FICHA TÉCNICA •</li>
+            <li class="marqueeText">FICHA TÉCNICA •</li>
+            <li class="marqueeText">FICHA TÉCNICA •</li>
+            <li class="marqueeText">FICHA TÉCNICA •</li>
+        </ul>
+    </div>
 </body>
 </html>
