--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
                                 Isis Castro 
                             </a>
                             <h4>
-                                Direção Criativa Produção
+                                Direção Criativa <br>
+                                Produção
                             </h4>
                         </div>
                         <div class="infoLinks">
@@ -318,7 +319,8 @@
                                 Maria Clara Martins 
                             </a>
                             <h4>
-                                Estilo Produção 
+                                Estilo <br>
+                                Produção 
                             </h4>
                         </div>
                         <div class="infoLinks">
@@ -338,6 +340,7 @@
                             </h4>
                         </div>
                     </div>
+
                 </div>
             </div>
             <div class="tab-pane fade" id="galeria04">
@@ -424,6 +427,7 @@
         </ul>
     </div>
 
+    <script type="module" src="js/firebase.js"></script>
     <script>
         $('.carousel').carousel({
             interval: 500
