--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <a class="mainLink" target="_blank" href="https://www.instagram.com/pepperitah/">Pepperitah</a> e 1/2 do 
                 <a class="mainLink" target="_blank" href="https://www.instagram.com/sometimesvvwork/">sometimesvvwork.</a>
                 Colaborou previamente com 
-                <a target="_blank" href="https://www.biabum.com">Estúdio Biabum</a>,
-                <a target="_blank" href="https://220mkt.com.br">220MKT</a>,
-                <a target="_blank" href="https://straubdesign.com.br">Straub Design</a>, 
-                <a target="_blank" href="https://www.instagram.com/1826stds/">1826stds</a>
+                <a class="mainLink" target="_blank" href="https://www.biabum.com">Estúdio Biabum</a>,
+                <a class="mainLink" target="_blank" href="https://220mkt.com.br">220MKT</a>,
+                <a class="mainLink" target="_blank" href="https://straubdesign.com.br">Straub Design</a>, 
+                <a class="mainLink" target="_blank" href="https://www.instagram.com/1826stds/">1826stds</a>
                 e outros. 
                 <img src="img/bandeira.png">
             </span>
@@ -60,10 +60,10 @@
                 <a class="mainLink" target="_blank" href="https://www.instagram.com/pepperitah/">Pepperitah</a> e 1/2 do 
                 <a class="mainLink" target="_blank" href="https://www.instagram.com/sometimesvvwork/">sometimesvvwork.</a>
                 Colaborou previamente com 
-                <a target="_blank" href="https://www.biabum.com">Estúdio Biabum</a>,
-                <a target="_blank" href="https://220mkt.com.br">220MKT</a>,
-                <a target="_blank" href="https://straubdesign.com.br">Straub Design</a>, 
-                <a target="_blank" href="https://www.instagram.com/1826stds/">1826stds</a>
+                <a class="mainLink" target="_blank" href="https://www.biabum.com">Estúdio Biabum</a>,
+                <a class="mainLink" target="_blank" href="https://220mkt.com.br">220MKT</a>,
+                <a class="mainLink" target="_blank" href="https://straubdesign.com.br">Straub Design</a>, 
+                <a class="mainLink" target="_blank" href="https://www.instagram.com/1826stds/">1826stds</a>
                 e outros. 
                 <img src="img/bandeira.png">
             </span>
